<resources>
    <string name="app_name">hasBeen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">1486067624940815</string>
    <string name="exception">Exception: %1$s</string>
    <string name="share_done">done</string>
    <string name="domain">http://192.168.0.5:8080/</string>
    <string name="map_id">AIzaSyDGLVU0yTEqcNnIRk-SiLXEytDAsJ-Pi0E</string>
    <string name="support_email">support@hasbeen.co</string>
    <string name="web_domain">http://www.hasbeen.co</string>
    <string name="license_domain">http://common.hasbeen.co/license/android.html</string>
    <string name="no_place_prefix">http://hasbeen.blob.core.windows.net/common/no_place_</string>
    <string name="no_place_suffix">.png</string>
    <string name="store_domain">https://play.google.com/store/apps/details?id=co.hasBeen</string>
    <string name="search_day_tutorial">http://hasbeen.blob.core.windows.net/common/v%s/search_day.jpg</string>
    <string name="gallery_tutorial">http://hasbeen.blob.core.windows.net/common/v%s/gallery.jpg</string>
    <string name="upload_tutorial">http://hasbeen.blob.core.windows.net/common/v%s/upload.jpg</string>
    <string name="action_bar_share_title"> Share </string>
    <string name="action_bar_edit_title"> Edit </string>
    <string name="action_bar_setting_title"> Setting </string>
    <string name="action_bar_account_title"> Setting account</string>
    <string name="action_bar_comment_title"> Comment </string>
    <string name="action_bar_follow_title"> Follower · Following </string>
    <string name="action_bar_place_title"> Choose place </string>
    <string name="action_bar_upload_title"> Upload </string>
    <string name="action_bar_profile_title"> Profile </string>
    <string name="action_bar_fbfriends_title"> Facebook Friends </string>
    <string name="action_bar_done">DONE</string>
    <string name="action_bar_select_day">Select Day</string>
    <string name="action_bar_reset_password">Reset your password</string>
    <string name="tab_home">Home</string>
    <string name="tab_explorer">Explorer</string>
    <string name="tab_gallery">Gallery</string>
    <string name="tab_alarm">Alarm</string>
    <string name="tab_profile">Profile</string>
    <string name="login_email"> sign in</string>
    <string name="login_facebook"> sign in with Facebook</string>
    <string name="first_name">First name</string>
    <string name="signup_email">sign up</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="already_account">I already have a account.</string>
    <string name="sign_up">sign up</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="forgot_email_text">Please write your Email</string>
    <string name="reset_ok">New password was send by email.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_newsfeed">No post to show.\nTake a tour on hasBeen and follow your friends.</string>
    <string name="find_trip">Tour on others trips.</string>
    <string name="your_facebook_friend_count">A total of %1$d of your Facebook\n friends are now with hasBeen.</string>
    <string name="show_all_facebook_friend">View all of %1$d friends.</string>
    <string name="comment_day_trip">&#160;commented on your day trip.</string>
    <string name="love_day_trip">&#160;liked your day trip.</string>
    <string name="post_day_trip">&#160;posted new day trip.</string>
    <string name="love_photo">&#160;liked your photo.</string>
    <string name="comment_photo">&#160;commented on your photo.</string>
    <string name="title_hint">leave your title.</string>
    <string name="description_hint">leave your memory.</string>
    <string name="love">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="report_day">Report day trip</string>
    <string name="share_day">Share day trip</string>
    <string name="social_status">%1$d likes · %2$d comments · %3$d shares</string>
    <string name="like_count">%d likes ·&#160;</string>
    <string name="comment_count">%d comments ·&#160;</string>
    <string name="share_count">%d shares</string>
    <string name="photo_count">%d photos</string>
    <string name="total_photo_count">total %d photos</string>
    <string name="write_comment">leave your comment</string>
    <string name="recommendation">Interesting trips for you.</string>
    <string name="remove_day">Delete day trip</string>
    <string name="edit_day">Edit day trip</string>
    <string name="change_place">Change place</string>
    <string name="merge_place">Merge to above place</string>
    <string name="remove_place">Remove this place</string>
    <string name="choose_trip">Choose your trip</string>
    <string name="remove_confirm">Are you sure you want delete this?</string>
    <string name="version_confirm">Please, update Application.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update"> Yes, update</string>
    <string name="uploading">Uploading..\nYou will be noticed when it\'s done.</string>
    <string name="uploading_count">%1$d/%2$d photos</string>
    <string name="loading">Loading..</string>
    <string name="near_by">Near by</string>
    <string name="remove_photo">Delete photo</string>
    <string name="edit_photo">Edit photo</string>
    <string name="select_cover_photo">Change to cover photo</string>
    <string name="report_photo">Report photo</string>
    <string name="share_photo">Share photo</string>
    <string name="see_more_description">read more</string>
    <string name="remove_comment">Delete comment</string>
    <string name="edit_comment">Edit comment</string>
    <string name="report_comment">Report comment</string>
    <string name="more_comment">read %d more comments</string>
    <string name="load_comment">read more</string>
    <string name="hour_ago">%1$d hours</string>
    <string name="miniutes_ago">%1$d minutes</string>
    <string name="just_now">Just now</string>
    <string name="day_ago">E, a h:mm</string>
    <string name="week_ago">%1$d weeks</string>
    <string name="month_ago">MMMM dd, yyyy</string>
    <string name="photo_time">hh:mma</string>
    <string name="name">%1$s %2$s</string>
    <string name="day">Days</string>
    <string name="photo">Photos</string>
    <string name="hint_trips">Search trips by city or country.</string>
    <string name="hint_users">Search users by name or username.</string>
    <string name="trip">Trip</string>
    <string name="people">People</string>
    <string name="gallery_default_1">Location information (or GPS tag) is off or no photo with location information on your device.</string>
    <string name="gallery_default_2">Take new photos after switching on location tagging on camera setting.</string>
    <string name="place">place</string>
    <string name="non_load_status">%1$d+ places · %2$d photos</string>
    <string name="load_status">%1$d places · %2$d photos</string>
    <string name="day_count">%d days</string>
    <string name="location_loading_text">Organizing photos in process.</string>
    <string name="place_near_by">Place near by</string>
    <string name="news">NEWS</string>
    <string name="you">YOU</string>
    <string name="commented_photo_alarm">&lt;b&gt;%1$s&lt;/b&gt; commented on &lt;b&gt;%2$s&lt;/b&gt; photo.</string>
    <string name="loved_photo_alarm">&lt;b&gt;%1$s&lt;/b&gt; liked &lt;b&gt;%2$s&lt;/b&gt; photo.</string>
    <string name="commented_day_alarm">&lt;b&gt;%1$s&lt;/b&gt; commented on &lt;b&gt;%2$s&lt;/b&gt; day trip.</string>
    <string name="loved_day_alarm">&lt;b&gt;%1$s&lt;/b&gt; liked &lt;b&gt;%2$s&lt;/b&gt; day trip.</string>
    <string name="post_day_alarm">&lt;b&gt;%1$s&lt;/b&gt; posted new day trip</string>
    <string name="following_alarm">&lt;b&gt;%1$s&lt;/b&gt; followed &lt;b&gt;%2$s&lt;/b&gt;.</string>
    <string name="account_facebook_friend_alarm">Your Facebook Friends &lt;b&gt;%1$s&lt;/b&gt; signed up &lt;b&gt;hasBeen&lt;/b&gt;.</string>
    <string name="you_user">you</string>
    <string name="your_user">your</string>
    <string name="possessive">\'s</string>
    <string name="commented_photo_push">%1$s commented on %2$s photo.</string>
    <string name="commented_day_push">%1$s commented on %2$s day trip.</string>
    <string name="loved_photo_push">%1$s liked %2$s photo.</string>
    <string name="loved_day_push">%1$s liked %2$s day trip.</string>
    <string name="day_post_done">%1$s day trip hasBeen uploaded.</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="follow_status">%1$d follower · %2$d following</string>
    <string name="follower_count">%d follower</string>
    <string name="following_count">%d following</string>
    <string name="map">Map</string>
    <string name="internet_error">Please check your nextwork connection.</string>
    <string name="common_error">Error has occurred.</string>
    <string name="login_error">Incorrect login information.</string>
    <string name="name_size_error">Name must be at least 1 and most 20 letters.</string>
    <string name="email_size_error">Email must be at most 255 letters.</string>
    <string name="password_size_error">Password must be at least 8 and most 50 letters.</string>
    <string name="password_confirm_error">New password does not match.</string>
    <string name="description_size_error">Memo must be at least 2 and most 255 letters.</string>
    <string name="title_size_error">Title must be at least 2 and most 255 letters.</string>
    <string name="session_gone">Your session expired, please sign in again.</string>
    <string name="dup_email">That email is being used.</string>
    <string name="day_deleted"> This day trip was deleted.</string>
    <string name="facebook_title">Facebook</string>
    <string name="support_title">Support</string>
    <string name="account_title">Account</string>
    <string name="logout">Log out</string>
    <string name="setting_account">Account setting</string>
    <string name="find_facebook">Find facebook friends</string>
    <string name="about_hasbeen">About hasBeen</string>
    <string name="version">Version</string>
    <string name="report_problem">Report a problem</string>
    <string name="open_source">License</string>
    <string name="current_version">Current Version v%s</string>
    <string name="latest_version">Latest Version v%s</string>
    <string name="update_version">Update Application.</string>
    <string name="islatest_version">This app is latest.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="change_password">CHANGE PASSWORD</string>
</resources>