<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:background="@color/day_background"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/day_background"
    android:layout_height="match_parent">
    <TextView
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_width="match_parent"
    android:background="@color/day_background"
    android:textSize="13sp"
    android:textColor="@color/light_gray"
    android:gravity="center_vertical"
    android:layout_height="30dp" />
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:background="@drawable/description_selector"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
    <TextView
        style="@style/Setting.Account.TextView"
        android:text="@string/first_name"/>
        <EditText
            style="@style/Setting.Account.EditText"
            android:id="@+id/firstName">
            <requestFocus/>
            </EditText>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:background="@drawable/description_selector"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Setting.Account.TextView"
            android:text="@string/last_name"/>
        <EditText
            style="@style/Setting.Account.EditText"
            android:id="@+id/lastName"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <TextView
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:background="@color/day_background"

        android:textSize="13sp"
        android:textColor="@color/light_gray"
        android:gravity="center_vertical"
        android:layout_height="30dp" />
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:background="@drawable/description_selector"-->
        <!--android:paddingRight="16dp"-->
        <!--android:orientation="horizontal"-->
        <!--android:weightSum="2"-->
        <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="User name"-->
            <!--android:textSize="15sp"-->
            <!--android:textColor="@color/light_black"-->
            <!--android:gravity="center_vertical"-->
            <!--android:layout_height="48dp" />-->
        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="legshort"-->
            <!--android:singleLine="true"-->
            <!--android:textSize="15sp"-->
            <!--android:textColor="@color/light_black"-->
            <!--android:gravity="center_vertical|right"-->
            <!--android:layout_height="48dp" />-->
    <!--</LinearLayout>-->
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:alpha="0.2"-->
        <!--android:background="#000"-->
        <!--android:layout_height="2px" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/theme_white"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/male"
            android:id="@+id/male"
            android:background="@drawable/description_selector"
            android:textSize="15sp"
            android:textColor="@drawable/search_text_selector"
            android:gravity="center"
            android:layout_height="48dp" />
        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.2"
            android:background="@color/light_black" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/female"
            android:singleLine="true"
            android:id="@+id/female"
            android:textSize="15sp"
            android:background="@drawable/description_selector"
            android:textColor="@drawable/search_text_selector"
            android:gravity="center"
            android:layout_height="48dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:background="@drawable/description_selector"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Setting.Account.TextView"
            android:text="@string/birthday" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:gravity="center_vertical|right"
            android:textSize="15sp"
            android:textColor="@color/light_black"
            android:singleLine="true"
            android:background="@drawable/description_selector"
            android:inputType="date"
            android:text="@string/enter_birthday"
            android:id="@+id/birthday"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:background="@drawable/description_selector"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Setting.Account.TextView"
            android:text="@string/city"/>
        <EditText
            style="@style/Setting.Account.EditText"
            android:id="@+id/city"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:background="@drawable/description_selector"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Setting.Account.TextView"
            android:text="@string/country" />
        <EditText
            android:id="@+id/country"
            style="@style/Setting.Account.EditText"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
    <TextView
        android:layout_width="match_parent"
        android:background="@drawable/description_selector"
        android:paddingLeft="16dp"
        android:visibility="gone"
        android:id="@+id/changePassword"
        android:text="@string/change_password"
        android:textSize="15sp"
        android:textColor="@color/light_black"
        android:gravity="center_vertical"
        android:layout_height="48dp" />
    <View
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:background="#000"
        android:layout_height="2px" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/actionbar_shadow"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh"
        android:layout_gravity="center"
        android:src="@drawable/loading"/>
</FrameLayout>